--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
+    "gsap": "^3.12.7",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
